HP-2007-12-21-0: Enhancem: added support for new IJS
                 Changed:  checktree/install_core_system/init_cluster.tcl
                 Review:   MD

JO-2007-12-19-0: Enhancem: added support for schemas
                 Review:   AP

CR-2007-12-19-0: Bugfix:    o fixed problem with open spawn session for multi
                              cluster support if different sge_root source
                              directory is used
                            o writing java build host long resolved into
                              build_testsuite.property file
                 Review:    RH

JG-2007-12-19-0: Bugfix:    Look for AR error message only with GE >= 62.
                 Review:    RD

OJ-2007-12-18-0: Enhance:   Added testcase for IZ 2441
                            at bugs/issuezilla/2441.
                 Review:    MD

CR-2007-12-13-0: Bugfix:    o fixed show_status test (did not check occurance
                              of all expected components and jvms)
                 Bugfix:    o enhanced security/file_permissions test to allow
                              new files for reporter component
                 Bugfix:    o support for new cli command switches       
                 Issue:     hedeby issue #203
                 Review:    RH

PJ-2007-12-12-0: RFE:       ARCo should support multi-clusters
                 Changed:   reporting
                 Review:    JG

RD-2007-12-12-0: Bugfix:    fixed migration test
                 Review:    JG

LP-2007-12-11-0: Bugfix:    Fixed typo preventing some tests from being executed 
                            in normal mode
                 Review:    MP

JG-2007-12-10-0: Enhancem.: Added test bugs/issuezilla/2136.
                 Review:    MD

CR-2007-12-07-0: Bugfix:    fixed wrong close behaviour in close_spawn_process()
                 Review:    JG

JG-2007-12-07-0: Enhancem.: Be more fault tolerant when closing rlogin 
                            connections, some cleanup.